fix: scrollbar styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,10 @@
 @import url('./theme.css');
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--accent-text-color) black;
+}
+
 html,
 body {
   padding: 0;
